<resources>
    <string name="app_name">Shaadoow_Task</string>
    <string name="task_details">Task Details : </string>
    <string name="task_details_text">Create a task for merging two videos side by side with some real time video filters using ffmpeg framework or the native Android framework.</string>
    <string name="lets_go">Lets Go</string>
    <string name="choose_video_one">Choose Video One</string>
    <string name="choose_video_two">Choose Video Two</string>
    <string name="merge_video_side_by_side">Merge Video Side By Side</string>
    <string name="path_of_video_one_will_show_after_you_chose_vedio">Path of video one will show after you chose vedio</string>
    <string name="path_of_video_two_will_show_after_you_chose_vedio">Path of video two will show after you chose vedio</string>
    <string name="kalvin_filter">Kalvin Filter</string>
    <string name="willow_filter">Willow Filter</string>
    <string name="fade_inout">Fade InOut</string>
</resources>